refactorizacion color parcial autientificacion supa base

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,29 +19,29 @@
     "titleBar.inactiveForeground": "#15202b99"
   },
   "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
+    "**/.git": false,
+    "**/.svn": false,
     "**/.hg": false,
-    "**/CVS": true,
-    "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "node_modules": true,
-    "out": true,
-    "next-env.d.ts": true,
-    "tailwind.config.ts": true,
+    "**/.DS_Store": false,
+    "**/Thumbs.db": false,
+    "**/CVS": false,
+    "node_modules": false,
+    "out": false,
+    "next-env.d.ts": false,
+    "tailwind.config.ts": false,
     "postcss.config.mjs": false,
-    ".eslintrc.json": true,
-    ".gitignore": true,
-    "components.json": true,
-    "next.config.ts": true,
-    "package-lock.json": true,
-    "package.json": true,
-    "README.md": true,
-    "setup-project.sh": true,
-    "test.css": true,
-    "tsconfig.build.json": true,
-    "tsconfig.json": true,
-    "tsconfig.node.json": true
+    ".eslintrc.json": false,
+    ".gitignore": false,
+    "components.json": false,
+    "next.config.ts": false,
+    "package-lock.json": false,
+    "package.json": false,
+    "README.md": false,
+    "setup-project.sh": false,
+    "test.css": false,
+    "tsconfig.build.json": false,
+    "tsconfig.json": false,
+    "tsconfig.node.json": false
   },
   "explorerExclude.backup": {}
 }
