--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
     "@google/genai": "^0.14.0",
+    "@google/generative-ai": "^0.2.1",
     "@hookform/resolvers": "latest",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -39,8 +40,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
-    "@supabase/auth-helpers": "github:supabase/auth-helpers#main",
-    "@supabase/auth-helpers-nextjs": "latest",
+
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-table": "latest",
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next": "^14.2.0",
     "next-themes": "latest",
+    "or": "^0.2.0",
     "papaparse": "latest",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
