fix: add @types/tinycolor2 for TypeScript support

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/storybook__react": "^4.0.2",
+    "@types/tinycolor2": "^1.4.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
